@deniscostadsc @lipemorais #51 | Fix h1 tag text not responsive in the home page

--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -44,3 +44,9 @@ body {
 	width:200px;
 	height:230px;
 }
+
+@media(max-width:767px) {
+	h1 {
+		font-size: 327%;
+	}
+}
